# 23-08Sturgeon

./: .gitignore  23-08Sturgeon.sublime-project  23-08Sturgeon.sublime-workspace  Cargo.toml  t0d0.txt
blender/: building_mousehole.blend  building_mousehole.blend1  d6_model.blend  d6_model.glb  d6_stack.blend  d6_stack.blend1  d6_stack.glb  snickers_bar_pedestal_collection.blend  why a snickers bar tho.blend  why a snickers bar tho.blend1
godot/positioning-project/: icon.svg.import  project.godot  snickers_bar.glb.import  snickers_bar_snickers-texture.png.import  snickers_pedestal.glb.import  snickers_pedestal_snickers-texture.png.import  w00_snickers.tscn
godot/positioning-project/afps/: afps_placement_Test.tscn  fps_map_ghost_city.glb.import  fps_map_ghost_city_0.png.import  fps_map_ghost_city_1.png.import  fps_map_ghost_city_10.png.import  fps_map_ghost_city_11.png.import  fps_map_ghost_city_12.png.import  fps_map_ghost_city_13.png.import  fps_map_ghost_city_14.png.import  fps_map_ghost_city_15.png.import  fps_map_ghost_city_16.png.import  fps_map_ghost_city_17.png.import  fps_map_ghost_city_18.png.import  fps_map_ghost_city_19.png.import  fps_map_ghost_city_2.png.import  fps_map_ghost_city_20.png.import  fps_map_ghost_city_21.png.import  fps_map_ghost_city_22.png.import  fps_map_ghost_city_23.png.import  fps_map_ghost_city_24.png.import  fps_map_ghost_city_25.png.import  fps_map_ghost_city_26.png.import  fps_map_ghost_city_27.png.import  fps_map_ghost_city_28.png.import  fps_map_ghost_city_29.png.import  fps_map_ghost_city_3.png.import  fps_map_ghost_city_30.png.import  fps_map_ghost_city_31.png.import  fps_map_ghost_city_32.png.import  fps_map_ghost_city_33.png.import  fps_map_ghost_city_34.png.import  fps_map_ghost_city_35.png.import  fps_map_ghost_city_36.png.import  fps_map_ghost_city_37.png.import  fps_map_ghost_city_38.png.import  fps_map_ghost_city_39.png.import  fps_map_ghost_city_4.png.import  fps_map_ghost_city_40.png.import  fps_map_ghost_city_41.png.import  fps_map_ghost_city_42.png.import  (+57 more)
test11_clientside_spawn_query/: Cargo.toml  ambient.toml
test11_clientside_spawn_query/src/: client.rs  server.rs
test13-cube/: Cargo.toml  ambient.toml
test13-cube/src/: server.rs
test15-buoy/: Cargo.toml  ambient.toml
test15-buoy/src/: client.rs  s_buoyancy.rs  s_buoyancy_boats_example.rs  s_matter_buoyancy.rs  s_matter_motors.rs  s_motor_boats_example.rs  server.rs  x_camera.rs  x_camera_follow_buoys.rs
w00_fish/: Cargo.toml  ambient.toml
w00_fish/assets/: pipeline.toml  snickers_pedestal.glb
w00_fish/src/: sceneloader.rs  server.rs
w00_fish/src/sceneloader/: scene_snickers.rs
w01_modmoba/: Cargo.toml  ambient.toml
w01_modmoba/src/amoba_ui/: ambient.toml  client.rs  server.rs
w01_modmoba/src/pinput/: ambient.toml  pinput_cli.rs  pinput_serv.rs
w01_modmoba/src/scene/: scene_cli.rs  scene_serv.rs
w02_examiner/: Cargo.toml  ambient.toml
w02_examiner/src/: server.rs
w03_screenpin/: Cargo.toml  ambient.toml
w03_screenpin/src/: client.rs  server.rs
w04_jewelrotator/: Cargo.toml  ambient.toml
w04_jewelrotator/src/: server.rs
w05_clientside_focam/: Cargo.toml  ambient.toml
w05_clientside_focam/src/: client.rs
w05_focustarget/: Cargo.toml  ambient.toml
w05_focustarget/src/: server.rs
w06_ui_reader/: Cargo.toml  ambient.toml
w06_ui_reader/src/: client.rs  server.rs
w07_ui_healthbar/: Cargo.toml  ambient.toml
w07_ui_healthbar/src/: client.rs  server.rs
w08_impulse_player/: Cargo.toml  ambient.toml
w08_impulse_player/src/: camera_maker.rs  client.rs  server.rs
w09_player_focam/: Cargo.toml  ambient.toml
w09_player_focam/src/: server.rs  server_debug_setup.rs
w10_skatemouse/: Cargo.toml  ambient.toml
w10_skatemouse/assets/: MSH_Building_Arch.glb  MSH_Building_Arch_Light.glb  MSH_Prop_Crate.glb  MSH_Prop_Trashbag.glb
w10_skatemouse/src/: c_debuglines.rs  c_findmycam.rs  c_hookmodel.rs  c_pinutils.rs  c_playeranim.rs  c_playeranim_model.rs  c_playeranim_model_v2.rs  c_playeranim_model_v2_large.rs  client.rs  s_buoyancy.rs  s_cargo_snapping.rs  s_deliveries.rs  s_matter_buoyancy.rs  s_mkworld.rs  s_mousecontrol.rs  s_playerbehaviour.rs  s_playergliderphysics.rs  s_playergliderphysics_v2.rs  s_playergliderphysics_v2_b.rs  s_playergliderphysics_v2_large.rs  s_playergliderphysics_v3.rs  s_selfie.rs  s_spawnplayers.rs  s_steering_and_camera.rs  server.rs
w12_tilting_turning/: Cargo.toml  ambient.toml
w12_tilting_turning/src/: c_nameui.rs  client.rs  server.rs
