[workspace]

members = [
    "w00_fish",
    "w02_examiner",
    "w03_screenpin",
    "w04_jewelrotator",
    "w05_clientside_focam",
    "w06_ui_reader",
    "w07_ui_healthbar",
    "w08_impulse_player",
    "w09_player_focam",
    "w10_skatemouse",
    "w12_tilting_turning",

    "test11_clientside_spawn_query",
    "test13-cube",
]