[package]
name = "test_15_buoy"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "d64f5e14a5" }

[[bin]]
name = "client_test_15_buoy"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_test_15_buoy"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]