[package]
name = "w_01_modmoba"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "c2ed4913" }

[[bin]]
name = "server_scene"
path = "src/scene/server.rs"
required-features = ["server"]
[[bin]]
name = "client_scene"
path = "src/scene/client.rs"
required-features = ["client"]

[[bin]]
name = "client_unit"
path = "src/unit/client.rs"
required-features = ["client"]
[[bin]]
name = "server_unit"
path = "src/unit/server.rs"
required-features = ["server"]

[[bin]]
name = "server_pinput"
path = "src/pinput/server.rs"
required-features = ["server"]
[[bin]]
name = "client_pinput"
path = "src/pinput/client.rs"
required-features = ["client"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]