[package]
name = "w_01_modmoba"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "c2ed4913" }

[[bin]]
name = "scene_serv"
path = "src/scene/scene_serv.rs"
required-features = ["server"]
[[bin]]
name = "scene_cli"
path = "src/scene/scene_cli.rs"
required-features = ["client"]

[[bin]]
name = "unit_cli"
path = "src/unit/unit_cli.rs"
required-features = ["client"]
[[bin]]
name = "unit_serv"
path = "src/unit/unit_serv.rs"
required-features = ["server"]

[[bin]]
name = "pinput_serv"
path = "src/pinput/pinput_serv.rs"
required-features = ["server"]
[[bin]]
name = "pinput_cli"
path = "src/pinput/pinput_cli.rs"
required-features = ["client"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]