[package]
name = "w_05_focustarget"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "c2ed4913" }

[[bin]]
name = "client_w_05_focustarget"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_w_05_focustarget"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]