[package]
name = "w_08_impulse_player"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "8ce8718f74" }

[[bin]]
name = "client_w_08_impulse_player"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_w_08_impulse_player"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "client_w_03_screenpin"
path = "../w03_screenpin/src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_w_03_screenpin"
path = "../w03_screenpin/src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]